# Nvidia-DGX

./: README.md
logs/: 2026-03-13-qwen35-35b-a3b-deployment.md  README.md
memory-vector-db/: .gitignore  README.md  memory_api_server.py
nemotron-120b-dgx-spark/: .gitignore  README.md  benchmark.sh  deploy.sh
nemotron-120b-dgx-spark/web/: README.md  app.py  requirements.txt
nemotron-120b-dgx-spark/web/templates/: index.html
pdf-to-markdown/: .gitignore  Dockerfile  README.md  SETUP_SUMMARY.md  docker-compose.yml  pyproject.toml
pdf-to-markdown/docs/: DEPLOYMENT.md
pdf-to-markdown/examples/: example_usage.py
pdf-to-markdown/scripts/: api_server.py  convert.py  mcp_server.py
qwen35-dgx-spark/: .gitignore  CONFIG.md  README.md  benchmark.sh  deploy.sh
